--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 !plugins/cmb_field_map
 !themes/elections
 !composer.json
+!README.md
 
 themes/elections/node_modules
 plugins/oa-elections/node_modules
