--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 	"extra" : {
         "installer-paths" : {
             "plugins/{$name}/": ["type:wordpress-plugin"],
-			"theme/{$name}/": ["type:wordpress-theme"]
+			      "themes/{$name}/": ["type:wordpress-theme"]
         }
     }
 }
